--- a/pages/chat.html
+++ b/pages/chat.html
@@ -2,7 +2,7 @@
 layout: default
 title: 留言板
 css: [common.css]
-js: [common.js,header.js]
+js: [header.js]
 ---
 <!-- 多说评论框 start -->
 <div class="ds-thread" data-thread-key="1" data-title="{{ page.title }}" data-url="{{ site.realchaturl }}"></div>
