--- a/pages/search.html
+++ b/pages/search.html
@@ -2,7 +2,7 @@
 layout: default
 title: 搜索
 css: [common.css,search.css]
-js: [common.js,header.js,totop.js]
+js: [header.js,search.js]
 ---
 <div id="mysearch" class="main-content">
 	<div id="searchbox">
