--- a/pages/about.html
+++ b/pages/about.html
@@ -2,4 +2,8 @@
 layout: mypost
 title: 关于我
 ---
-这里是关于我界面......
+<div class="aboutMe">
+	大家好，我是工作时长五年半的个人学习生，<span>英目花盗</span>，喜欢前端，python!<br/>        
+	music,<br/>
+	技，你太媚~~~~
+</div>
