解决图片显示问题

--- a/pages/software.html
+++ b/pages/software.html
@@ -10,7 +10,7 @@ js: [header.js]
 			{% if post.type == "software" %}
 				<li>
 					<a href="{{ site.baseurl }}{{ post.url }}">
-						<img src="{{ site.swimgurl }}/{{ post.imgurl }}">
+						<img src="{{ site.baseurl }}{{ site.swimgurl }}/{{ post.imgurl }}">
 						<span>{{ post.title }}<span>
 					</a>
 				</li>
