--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 css: [common.css]
-js: [common.js,header.js]
+js: [header.js]
 ---
 <div id="articlelist" class="main-content">
 	{% for post in site.posts  %}
